<resources>
    <string name="app_name">忘忧大陆</string>
    <string name="app_name_normal">忘忧大陆-虚拟空间交朋友</string>
    <string name="guide_prev">上一步</string>
    <string name="guide_next">下一步</string>
    <string name="guide_finish">进入忘忧大陆</string>
    <string name="guide_title_0">来到忘忧大陆</string>
    <string name="guide_intro_0">分享你的快乐，忘记你的烦忧</string>
    <string name="guide_title_1">放松身心</string>
    <string name="guide_intro_1">在喧闹的尘世中，划出一片空间，让身心放松</string>
    <string name="guide_title_2">邂逅道友</string>
    <string name="guide_intro_2">用文字和图片来分享自己的心情，邂逅和你有同感的道友</string>
    <string name="guide_title_3">即时交流</string>
    <string name="guide_intro_3">飞剑传书，同心纸，不一样的交流体验，就好像你在我眼前</string>
    <string name="guide_title_4">美好心情</string>
    <string name="guide_intro_4">忘却你的烦恼和忧愁，收获好心情</string>
    <string name="guide_home_emotion">点击这里设置自己的心情\n其他人可以实时接收到哦</string>
    <string name="guide_home_chat_random">召唤飞剑传书，邂逅道友</string>
    <string name="guide_home_chat_fast">获取同心纸进行急速聊天</string>
    <string name="guide_home_relaxation_world">去往休闲空间玩儿玩儿吧，也可下拉触发</string>
    <string name="guide_home_chat_room">来聊天室侃大山放松心情</string>
    <string name="guide_explore_report">长按可屏蔽举报对应内容</string>
    <string name="guide_explore_publish">点击这里可以发布内容</string>
    <string name="guide_user_report">如果收到对方骚扰，可拉黑和举报TA</string>
    <string name="guide_user_msg">如果对TA感兴趣，可以私聊TA</string>
    <string name="guide_post_like">喜欢可以点一下这里</string>
    <string name="guide_post_report">不喜欢可以点击这里屏蔽</string>
    <string name="guide_post_long_report">长按也可以屏蔽</string>
    <string name="guide_post_comment">点击这里留下你的脚印吧👣</string>
    <string name="nav_home">首页</string>
    <string name="nav_explore">发现</string>
    <string name="nav_msg">消息</string>
    <string name="nav_mine">我的</string>
    <string name="home_item_random">邂逅道友</string>
    <string name="home_item_fast">速聊同心纸</string>
    <string name="home_item_relaxation_world">休闲空间</string>
    <string name="home_item_chat_room">忘忧聊天房</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入搜索关键词</string>
    <string name="match_info">%s 道友在呼唤你</string>
    <string name="match_random_tips">正在匹配道友...</string>
    <string name="match_fast_tips">正在查找同心纸鹤...</string>
    <string name="match_cannot_tips">匹配次数和忘忧币都空了呢，签到会重置当天的匹配次数哦！快去忘忧币页面看看任务获取忘忧币吧!!!</string>
    <string name="match_destiny">相信缘分</string>
    <string name="match_destiny_desc">缘分有很多\n我只相信这一刻</string>
    <string name="match_emotion">心情速配</string>
    <string name="match_emotion_desc">情绪有很多\n你是什么心情呢</string>
    <string name="match_destiny_fast">缘分闪现</string>
    <string name="match_fast_desc">相信缘分\n让我们闪聊一下</string>
    <string name="match_room">解忧房</string>
    <string name="match_room_desc">来房间坐坐\n吹吹牛B聊聊天</string>
    <string name="match_game">游戏厅</string>
    <string name="match_game_desc">玩玩小游戏\n结识小伙伴吧</string>
    <string name="match_secret">秘密树洞</string>
    <string name="match_secret_desc">内心的秘密\n来告诉树洞吧</string>
    <string name="match_wish">心愿古树</string>
    <string name="match_wish_desc">许个愿吧\n万一实现了呢</string>
    <string name="filter_gender_title">匹配过滤</string>
    <string name="filter_gender_all">来者不拒</string>
    <string name="emotion_title">今日心情</string>
    <string name="emotion_hint">你今天心情怎么样？</string>
    <string name="emotion_happy">开心</string>
    <string name="emotion_normal">平淡</string>
    <string name="emotion_sad">难过</string>
    <string name="emotion_anger">愤怒</string>
    <string name="relaxation_world">休闲空间</string>
    <string name="relaxation_world_vip_tips">VIP畅玩</string>
    <string name="relaxation_world_start">立即畅玩</string>
    <string name="relaxation_world_test">试玩一下</string>
    <string name="post_create_title">发布内容</string>
    <string name="post_success_hint">内容发布成功</string>
    <string name="post_content_hint">留下一个脚印👣 分享此刻的心情 ~ </string>
    <string name="post_content_tips">维护健康网络环境，发布内容请遵守《用户行为规范》</string>
    <string name="post_content_limit_hint">内容须在 1-800 之间</string>
    <string name="post_detail_title">内容详情</string>
    <string name="post_comment_hint">喜欢就留下你的脚印 👣 </string>
    <string name="post_comment_limit_hint">内容须在 1-64 之间</string>
    <string name="content_delete">❌ 删除</string>
    <string name="content_delete_tips">确定要删除内容吗？删除后不可恢复！</string>
    <string name="room_list">房间大厅</string>
    <string name="room_create">创建房间</string>
    <string name="room_create_title_hint">标题，起个响亮的标题吧！2-16个字</string>
    <string name="room_create_desc_hint">描述，介绍下房间聊什么吧！2-64个字</string>
    <string name="room_create_welcome_hint">欢迎语，用户进入时会收到此条欢迎消息，2-64个字</string>
    <string name="room_last_crash_hint">检测到你上次加入的房间意外退出，是否继续进入之前的房间？</string>
    <string name="scan">扫一扫</string>
    <string name="fans">粉丝</string>
    <string name="follow">关注</string>
    <string name="mine_publish">我发布的</string>
    <string name="mine_like">我喜欢的</string>
    <string name="mine_follow">我的关注</string>
    <string name="mine_fans">我的粉丝</string>
    <string name="mine_blacklist">我的黑名单</string>
    <string name="follow_status_0">已关注</string>
    <string name="follow_status_1">回粉</string>
    <string name="follow_status_2">互相关注</string>
    <string name="follow_cancel_tips">确定取消关注对方吗？</string>
    <string name="menu_report">举报</string>
    <string name="blacklist_title">🙈不喜欢TA</string>
    <string name="blacklist_add">加入黑名单</string>
    <string name="blacklist_add_tips">确定要将对方加入黑名单?</string>
    <string name="blacklist_remove">移除黑名单</string>
    <string name="blacklist_remove_tips">确定要将对方移出黑名单?</string>
    <string name="blacklist">黑名单列表</string>
    <string name="settings">设置</string>
    <string name="settings_about">关于</string>
    <string name="about_content">来忘忧大陆，虚拟空间交朋友</string>
    <string name="about_copyright">Copyright &#169; 2020 VMLoft.\nAll Right Reserved.</string>
    <string name="settings_feedback">问题及意见反馈</string>
    <string name="settings_feedback_hint">遇到问题或者有好的意见都可以反馈给我们</string>
    <string name="feedback_contact">请输入联系方式~（选填）</string>
    <string name="feedback_contact_hint">留下联系方式更容易解决问题和实现你的功能建议~</string>
    <string name="feedback_content">请输入问题或意见内容~（必填）</string>
    <string name="feedback_content_hint">辛苦详细描述下遇到的问题，或者你这边比较好的建议</string>
    <string name="feedback_screenshot_hint">截图更有助于我们解决问题</string>
    <string name="feedback_submit_hint">反馈内容已提交，感谢</string>
    <string name="feedback_dislike">😣 不喜欢</string>
    <string name="feedback_report">😣 举报</string>
    <string name="feedback_hint">感谢反馈</string>
    <string name="feedback_type_opinion">意见建议</string>
    <string name="feedback_type_shield">🙈不想看</string>
    <string name="feedback_type_shield_post">不看内容</string>
    <string name="feedback_type_shield_author">不看作者</string>
    <string name="feedback_type_report">🙅举报反馈</string>
    <string name="feedback_type_report_ads">广告引流</string>
    <string name="feedback_type_report_sensitivity">政治敏感</string>
    <string name="feedback_type_report_illegal">违法违规</string>
    <string name="feedback_type_report_porn_vulgar">色情低俗</string>
    <string name="feedback_type_report_violence">血腥暴力</string>
    <string name="feedback_type_report_guide">诱导信息</string>
    <string name="feedback_type_report_uncivilized">谩骂攻击</string>
    <string name="feedback_type_report_fraud">涉嫌诈骗</string>
    <string name="feedback_type_report_uncomfortable">引人不适</string>
    <string name="feedback_type_report_other">其它</string>
    <string name="version_check">检查更新</string>
    <string name="version_skip">暂不升级</string>
    <string name="version_upgrade">马上升级</string>
    <string name="version_is_new">已经是最新版本</string>
    <string name="settings_account_security">账户与安全</string>
    <string name="account_destroy">销毁账户</string>
    <string name="account_destroy_desc">销毁账户将清空你所有数据，并且不可恢复，请谨慎操作</string>
    <string name="account_destroy_hint">销毁账户将清空你所有数据，并且不可恢复，确认销毁账户吗？</string>
    <string name="account_destroy_success">账户销毁已完成，感谢你的使用，期待再见</string>
    <string name="update_password">修改密码</string>
    <string name="update_password_desc">设置密码后可以使用（邮箱/账户+密码）登录</string>
    <string name="update_password_email_tips">当前邮箱</string>
    <string name="update_password_email_null">设置密码前请先绑定邮箱</string>
    <string name="update_password_success">修改密码成功，请使用【账户+新密码】重新登录</string>
    <string name="settings_privacy">隐私设置</string>
    <string name="privacy_stranger_msg">陌生人私信</string>
    <string name="privacy_stranger_msg_tips">关闭后将不允许陌生人通过个人主页向你发起聊天</string>
    <string name="privacy_blacklist">黑名单</string>
    <string name="settings_dark">深色模式</string>
    <string name="settings_dark_system">跟随系统</string>
    <string name="settings_dark_system_hint">开启状态下，会自动跟随系统夜间模式切换应用内主题样式</string>
    <string name="settings_dark_manual">手动设置</string>
    <string name="settings_dark_normal">正常模式</string>
    <string name="notify_open">开启消息通知</string>
    <string name="notify_open_tips">不错过对方的消息</string>
    <string name="settings_notify">通知设置</string>
    <string name="notify_switch">通知开关</string>
    <string name="notify_switch_msg">接收新消息通知</string>
    <string name="notify_switch_call">接收音视频邀请通知通知</string>
    <string name="notify_msg_detail">消息通知展示详情</string>
    <string name="notify_msg_detail_hint">关闭后，收到新消息通知将不展示具体内容，展示为："你有新的消息，请注意查看"</string>
    <string name="notify_sound_vibrator">声音与振动</string>
    <string name="notify_msg_system">新消息系统通知</string>
    <string name="notify_msg_system_hint">前往系统设置修改消息声音与震动</string>
    <string name="settings_media">图片资源</string>
    <string name="media_auto">自动加载</string>
    <string name="media_save">保存到相册</string>
    <string name="media_save_hint">应用内拍照的图片将保存到系统相册</string>
    <string name="media_clear">清空缓存</string>
    <string name="media_clear_hint">缓存有利于节省流量，清空缓存可释放手机存储空间</string>
    <string name="media_clear_toast">缓存清空完成</string>
    <string name="settings_info">个人信息</string>
    <string name="info_cover">封面图</string>
    <string name="info_avatar">头像</string>
    <string name="info_username">用户名</string>
    <string name="info_username_tips">用户名必须唯一，且只能设置一次，4-20个字符，不能包含除 a-z A-Z 0-9 _ . 外的其它字符</string>
    <string name="info_nickname">昵称</string>
    <string name="info_nickname_default">小透明</string>
    <string name="info_nickname_tips">昵称长度1-12字符，不能包含特殊字符</string>
    <string name="info_email">邮箱</string>
    <string name="info_bind_email">绑定邮箱</string>
    <string name="info_bind_email_tips">新的邮箱地址会覆盖之前绑定的邮箱</string>
    <string name="info_email_null">未绑定</string>
    <string name="info_phone">手机号</string>
    <string name="info_phone_null">未绑定</string>
    <string name="info_gender">性别</string>
    <string name="info_birthday">生日</string>
    <string name="info_signature">个性签名</string>
    <string name="info_signature_default">无个性不签名</string>
    <string name="info_address">地址</string>
    <string name="info_address_default">四海为家</string>
    <string name="info_profession">职业</string>
    <string name="info_not_set">未设置</string>
    <string name="gold_desc_h1">什么是忘忧币</string>
    <string name="gold_desc_body1">忘忧币是仅限【忘忧大陆】App内使用的虚拟币。</string>
    <string name="gold_desc_h2">如何获得忘忧币</string>
    <string name="gold_desc_body2">忘忧币可以通过每日签到、视频任务、充值等方式获取</string>
    <string name="gold_desc_h3">如何使用忘忧币</string>
    <string name="gold_desc_body3">忘忧币可用于匹配消耗、后续的礼物答谢等虚拟服务或商品。</string>
    <string name="gold_desc_h4">充值说明</string>
    <string name="gold_desc_body4">1.当前仅支持支付宝支付；\n
        2.用户确认购买后，将按照所选择的支付方式从对应的第三方支付账户付款扣费；\n
        3.忘忧币充值成功后，暂时不支持提现或者转赠他人；\n
        4.请不要通过任何非官方渠道(包括他人代充、店铺代充等)进行会员或忘忧币充值。非官方渠道充值存在账号被盗取、个人信息泄露、会员或忘忧币被官方回收等风险，请认准官方充值渠道，保护账号和财产安全~</string>
    <string name="gold_desc_h5">支付遇到问题</string>
    <string name="gold_desc_body5">如果显示充值成功(已经付费成功)，但忘忧币没有到账，可以先杀掉App进程再次进入，查看忘忧币是否有更新(有时候会有延迟哒，不要着急哦~)\n\n
        如果等了一段时间忘忧币还没有增加，请截图你的充值账单，反馈给我们，我们将尽快核查你的账单处理的哦~\n\n
        
        支付宝：进入【支付宝】>【我的】>【账单】> 找到与【忘忧大陆】APP相关的那一条支付记录，进入【订单详情】截图</string>
    <string name="go_feedback">去反馈</string>
    <string name="sign_out">退出登录</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="private_policy">《隐私政策》</string>
</resources>