<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.trade.GoldDescActivity">

    <include layout="@layout/widget_common_top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/vm_dimen_16">

            <TextView
                style="@style/AppText.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_16"
                android:text="@string/gold_desc_h1" />

            <TextView
                style="@style/AppText.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_8"
                android:text="@string/gold_desc_body1" />

            <TextView
                style="@style/AppText.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_16"
                android:text="@string/gold_desc_h2" />

            <TextView
                style="@style/AppText.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_8"
                android:text="@string/gold_desc_body2" />

            <TextView
                style="@style/AppText.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_16"
                android:text="@string/gold_desc_h3" />

            <TextView
                style="@style/AppText.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_8"
                android:text="@string/gold_desc_body3" />

            <TextView
                style="@style/AppText.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_16"
                android:text="@string/gold_desc_h4" />

            <TextView
                style="@style/AppText.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_8"
                android:text="@string/gold_desc_body4" />

            <TextView
                style="@style/AppText.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_16"
                android:text="@string/gold_desc_h5" />

            <TextView
                style="@style/AppText.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vm_dimen_8"
                android:text="@string/gold_desc_body5" />

            <TextView
                android:id="@+id/goFeedbackTV"
                style="@style/AppBtn.Confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/vm_dimen_36"
                android:text="@string/go_feedback" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
