<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <include layout="@layout/widget_common_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--账户与安全设置-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/settingsAccountSecurityLV"
            style="@style/AppLVStyle.NoDecoration"
            app:vm_line_title="@string/settings_account_security" />

        <!--暗色主题设置-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/settingsDarkLV"
            style="@style/AppLVStyle"
            android:layout_marginTop="@dimen/vm_dimen_8"
            app:vm_line_title="@string/settings_dark" />

        <!--通知设置-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/settingsNotifyLV"
            style="@style/AppLVStyle"
            app:vm_line_title="@string/settings_notify" />

        <!--图片资源-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/settingsPictureLV"
            style="@style/AppLVStyle"
            app:vm_line_title="@string/settings_media" />

        <!--关于-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/settingsAboutLV"
            style="@style/AppLVStyle.NoDecoration"
            app:vm_line_title="@string/settings_about" />

        <!--退出-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/settingsSignOutLV"
            style="@style/AppLVStyle.NoDecoration"
            android:layout_marginTop="@dimen/vm_dimen_8"
            app:vm_line_title="@string/sign_out"
            app:vm_line_title_color="@color/app_main" />
    </LinearLayout>
</LinearLayout>