<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.settings.NotifySettingsActivity">

    <include layout="@layout/widget_common_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--通知开关-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vm_dimen_8"
            android:paddingStart="@dimen/vm_padding_large"
            android:text="@string/notify_switch" />

        <!--新消息通知开关-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/notifyMsgLV"
            style="@style/AppLVStyle"
            android:layout_marginTop="@dimen/vm_dimen_8"
            app:vm_line_right_icon="@drawable/ic_switch_selector"
            app:vm_line_right_icon_size="@dimen/vm_dimen_32"
            app:vm_line_title="@string/notify_switch_msg" />

        <!--通知显示详情开关-->
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/notifyMsgDetailLV"
            style="@style/AppLVStyle.NoDecoration"
            app:vm_line_description="@string/notify_msg_detail_hint"
            app:vm_line_right_icon="@drawable/ic_switch_selector"
            app:vm_line_right_icon_size="@dimen/vm_dimen_32"
            app:vm_line_title="@string/notify_msg_detail" />

        <LinearLayout
            android:id="@+id/notifyMsgSystemLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vm_dimen_8"
            android:orientation="vertical">

            <!--跳转系统通知设置-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/vm_padding_large"
                android:text="@string/notify_sound_vibrator" />

            <!--跳转系统通知设置界面-->
            <com.vmloft.develop.library.tools.widget.VMLineView
                android:id="@+id/notifyMsgSystemLV"
                style="@style/AppLVStyle.NoDecoration"
                android:layout_marginTop="@dimen/vm_dimen_8"
                app:vm_line_description="@string/notify_msg_system_hint"
                app:vm_line_title="@string/notify_msg_system" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
