<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.settings.AccountSecuritySettingsActivity">

    <include layout="@layout/widget_common_top_bar" />


    <!--销毁账户-->
    <com.vmloft.develop.library.tools.widget.VMLineView
        android:id="@+id/signDestroyLV"
        style="@style/AppLVStyle.NoDecoration"
        android:layout_marginTop="@dimen/vm_dimen_8"
        app:vm_line_description="@string/account_destroy_desc"
        app:vm_line_title="@string/account_destroy"
        app:vm_line_title_color="@color/app_main" />

    <!--修改账户密码-->
    <com.vmloft.develop.library.tools.widget.VMLineView
        android:id="@+id/updatePasswordLV"
        style="@style/AppLVStyle.NoDecoration"
        android:layout_marginTop="@dimen/vm_dimen_8"
        app:vm_line_description="@string/update_password_desc"
        app:vm_line_title="@string/update_password"
        app:vm_line_title_color="@color/app_main" />
</LinearLayout>